--- a/src/components/header.html
+++ b/src/components/header.html
@@ -43,16 +43,6 @@
       <div>
         <ul id="main_menu">
           <li>
-            <a href="#">블로그</a>
-            <li class="submenu"><a href="/src/pages/blog_deep_page.html">딥블단</a></li>
-            <li class="submenu"><a href="/src/pages/blog_brand_page.html">브랜드 블로그</a></li>
-          </li>
-          <li>
-            <a href="#">플레이스</a>
-            <li class="submenu"><a href="/src/pages/place_seo_page.html">세팅&최적화</a></li>
-            <li class="submenu"><a href="/src/pages/place_exposure_page.html">상위노출</a></li>
-          </li>
-          <li>
             <a href="/src/pages/contact.html">문의하기</a>
           </li>
         </ul>
@@ -62,8 +52,6 @@
     <!-- 메뉴 목록 -->
     <nav id="pc_menu">
       <ul>
-        <li><a href="/src/pages/blog_deep_page.html">블로그</a></li>
-        <li><a href="/src/pages/place_seo_page.html">플레이스</a></li>
         <li
           style="
             border-radius: 16px;
@@ -73,7 +61,7 @@
             margin-right: 12px;
           "
         >
-          <a href="/src/pages/contact.html">문의하기</a>
+          <a href="/src/pages/contact.html">0507-1496-0568</a>
         </li>
       </ul>
     </nav>
