--- a/src/components/header.html
+++ b/src/components/header.html
@@ -55,9 +55,9 @@
         <li
           style="
             border-radius: 16px;
-            border: 1px solid #03c95b;
+            border: 1px solid #f83aaa;
             padding: 6px 20px;
-            background-color: #03c95b;
+            background-color: #f83aaa;
             margin-right: 12px;
           "
         >
