--- a/src/components/header.html
+++ b/src/components/header.html
@@ -61,7 +61,7 @@
             margin-right: 12px;
           "
         >
-          <a href="/src/pages/contact.html">0507-1496-0568</a>
+          <a href="tel:0507-1496-0568">0507-1496-0568</a>
         </li>
       </ul>
     </nav>
