--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,4 +1,4 @@
-<header id="header-background" style="color: black;">
+<header id="header-background" style="color: white">
   <!-- <div style="width: 13%"></div> -->
   <div
   class="container"
