--- a/src/components/header.html
+++ b/src/components/header.html
@@ -11,7 +11,7 @@
     <a id="pc_logo" href="/index.html" >
       <img
         src="/src/img/logo_white.png"
-        alt="marketing thedeep logo"
+        alt="logo"
         style="width: 120px"
       />
     </a>
