--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -3,13 +3,13 @@
   
   <img src="/src/img/logo_white.png" style="width: 150px; margin-top: 60px" />
   <div style="margin-top: 20px; margin-bottom: 20px">
-    <a href="https://blog.naver.com/mthedeep"
+    <a href="https://blog.naver.com/prettyphone93"
       ><img
         src="/src/img/naver_logo.png"
         style="width: 32px; margin-right: 4px"
     /></a>
-    <a href="https://pf.kakao.com/_mxnAfG/"
-      ><img src="/src/img/kakao_logo.png" style="width: 32px; margin-left: 4px"
+    <a href="https://talk.naver.com/ct/w5t762"
+      ><img src="/src/img/talktalk_logo.png" style="width: 32px; margin-left: 4px"
     /></a>
   </div>
   <p class="p14" id="pc_footer" style="font-weight: 300; display: none">
@@ -28,6 +28,14 @@
   <p class="p14" style="font-weight: 300; margin-bottom: 60px">
     Copyright &copy; 2024 Marketing Thedeep Co., Ltd. All rights reserved.
   </p>
+
+      <span itemscope="" itemtype="http://schema.org/Organization">
+<link itemprop="url" href="https://예쁜중고폰.com">
+<a itemprop="sameAs" href="https://blog.naver.com/prettyphone93"></a>
+<a itemprop="sameAs" href="https://talk.naver.com/ct/w5t762"></a>
+</span>
+
+  
 </footer>
 
 <script>
