--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -26,7 +26,7 @@
     두정중7길 1-12
   </p>
   <p class="p14" style="font-weight: 300; margin-bottom: 60px">
-    Copyright &copy; 2024 Marketing Thedeep Co., Ltd. All rights reserved.
+    Copyright &copy; 2023 예쁜중고폰 Co., Ltd. All rights reserved.
   </p>
 
       <span itemscope="" itemtype="http://schema.org/Organization">
