--- a/src/components/header.html
+++ b/src/components/header.html
@@ -21,32 +21,12 @@
       <div style="display: flex;
       justify-content: space-between;
       align-items: center;">
-       <a href="/index.html"
-       ><img id="mobile_logo" src="/src/img/logo_white.png" style="width: 100px" /></a>
-        <img id="menu_icon" src="/src/img/menu_white.png" style="width: 28px;" />
+       <a href="tel:0507-1496-0568" >
+        <img id="menu_icon" src="/src/img/menu_white.png" style="width: 28px;" /></a>
       </div>
     </div>
-    <div id="overlay"></div>
-    <div id="new_window">
-      <div style="display: flex; justify-content: space-between">
-        <div style="padding: 20px; margin-top: 20px;">
-          <a href="/index.html"><img src="/src/img/logo_black.png" style="width: 120px" /></a>
-        </div>
-        <div style="padding: 20px; align-self: center; margin-top: 26px">
-          <img
-            id="close_button"
-            src="/src/img/close_button.png"
-            style="width: 24px"
-          />
-        </div>
-      </div>
-      <div>
-        <ul id="main_menu">
-          <li>
-            <a href="/src/pages/contact.html">문의하기</a>
-          </li>
-        </ul>
-      </div>
+
+
     </div>
 
     <!-- 메뉴 목록 -->
