--- a/src/components/header.html
+++ b/src/components/header.html
@@ -40,6 +40,7 @@
             border: 1px solid #f83aaa;
             padding: 6px 20px;
             background-color: #f83aaa;
+              margin-top: 20px;
             margin-right: 100px;
           "
         >
