--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,4 +1,4 @@
-<header id="header-background" style="color: white">
+<header id="header-background" style="color: white;">
   <!-- <div style="width: 13%"></div> -->
   <div
   class="container"
@@ -29,7 +29,6 @@
     </div>
 
 
-    </div>
 
     <!-- 메뉴 목록 -->
     <nav id="pc_menu">
