--- a/src/components/header.html
+++ b/src/components/header.html
@@ -103,7 +103,7 @@
   window.addEventListener("scroll", function () {
     var header = document.getElementById("header-background");
     if (window.scrollY > 91) {
-      header.style.backgroundColor = "black";
+      header.style.backgroundColor = "white";
     } else {
       header.style.backgroundColor = "transparent";
     }
