--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -144,6 +144,7 @@ section#main_footer {
   margin-top: 40px;
   border-radius: 36px;
   background-color: white;
+  color: #f83aaa;
 }
 #main_footer_div a {
   text-decoration: none;
