--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -187,12 +187,12 @@ section#main_footer {
 }
 
 .container2 {
-  width: 30%;
+  width: 65%;
   margin: 0px auto;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
