--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -186,6 +186,17 @@ section#main_footer {
   justify-content: space-between;
 }
 
+.container {
+  width: 65%;
+  margin: 0px auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
 .image-container {
   position: relative;
   height: 100%;
