--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -186,7 +186,7 @@ section#main_footer {
   justify-content: space-between;
 }
 
-.container {
+.container-two {
   width: 65%;
   margin: 0px auto;
   display: flex;
