--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -188,8 +188,8 @@ section#main_footer {
 
 .container-two {
   width: 65%;
-/*  margin: 0px auto;
-  display: flex;
+ margin: 0px auto;
+/*  display: flex;
  flex-wrap: wrap; 
   align-items: center;
   justify-content: center; */
