--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -189,10 +189,11 @@ section#main_footer {
 .container-two {
   width: 65%;
  margin: 0px auto;
-/*  display: flex;
+  display: flex;
+ justify-content: center;/*
  flex-wrap: wrap; 
-  align-items: center;
-  justify-content: center; */
+  align-items: center; */
+
 }
 
 
