--- a/src/components/header.html
+++ b/src/components/header.html
@@ -43,7 +43,7 @@
             margin-right: 12px;
           "
         >
-          <a href="tel:0507-1496-0568">0507-1496-0568</a>
+          <a href="tel:0507-1496-0568">☎ 0507-1496-0568</a>
         </li>
       </ul>
     </nav>
