--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,7 +61,7 @@
   align-items: center;
   flex-shrink: 0;
   border-radius: 50%;
-  background-color: #03c95b;
+  background-color: #f83aaa;
   font-weight: 600;
   color: white;
   width: 38px;
