--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,7 @@
   width: 100%;
   text-align: center;
   display: flex;
-  background-image: url("/src/img/main/city(pc).png");
+  background-image: url("/src/img/sec/main_back.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
