--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,7 +35,7 @@
 }
 
 #reasons {
-  background-image: url("/src/img/main/main_background_2.png");
+  background-image: url("/src/img/main/main_background_2.jpg");
   text-align: center;
 }
 #reasons_div {
