--- a/src/components/header.html
+++ b/src/components/header.html
@@ -33,6 +33,10 @@
     <!-- 메뉴 목록 -->
     <nav id="pc_menu">
       <ul>
+        <li><a href="/src/pages/blog_deep_page.html">매입</a></li>
+        <li><a href="/src/pages/place_seo_page.html">판매</a></li>
+        <li><a href="/src/pages/blog_deep_page.html">알뜰/선불폰</a></li>
+
         <li
           style="
             border-radius: 16px;
