--- a/src/components/header.html
+++ b/src/components/header.html
@@ -29,12 +29,46 @@
     </div>
 
 
+<div id="overlay"></div>
+    <div id="new_window">
+      <div style="display: flex; justify-content: space-between">
+        <div style="padding: 20px; margin-top: 20px;">
+          <a href="/index.html"><img src="/src/img/logo_black.png" style="width: 120px" /></a>
+        </div>
+        <div style="padding: 20px; align-self: center; margin-top: 26px">
+          <img
+            id="close_button"
+            src="/src/img/close_button.png"
+            style="width: 24px"
+          />
+        </div>
+      </div>
+      <div>
+        <ul id="main_menu">
+          <li>
+            <a href="#">중고폰</a>
+            <li class="submenu"><a href="/src/pages/blog_deep_page.html">매입</a></li>
+            <li class="submenu"><a href="/src/pages/blog_brand_page.html">판매</a></li>
+          </li>
+          <li>
+            <a href="/src/pages/contact.html">문의하기</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+
+
+    
+
 
     <!-- 메뉴 목록 -->
     <nav id="pc_menu">
       <ul>
-        <li><a href="/src/pages/blog_deep_page.html">매입</a></li>
-        <li><a href="/src/pages/place_seo_page.html">판매</a></li>
+        <li><a href="/src/pages/blog_deep_page.html">중고폰</a></li>
         <li><a href="/src/pages/blog_deep_page.html">알뜰/선불폰</a></li>
 
         <li
