--- a/src/components/header.html
+++ b/src/components/header.html
@@ -47,11 +47,11 @@
         <ul id="main_menu">
           <li>
             <a href="#">중고폰</a>
-            <li class="submenu"><a href="/src/pages/blog_deep_page.html">매입</a></li>
-            <li class="submenu"><a href="/src/pages/blog_brand_page.html">판매</a></li>
+            <li class="submenu"><a href="/src/pages/buy.html">매입</a></li>
+            <li class="submenu"><a href="/src/pages/sell.html">판매</a></li>
           </li>
           <li>
-            <a href="/src/pages/contact.html">문의하기</a>
+            <a href="/src/pages/prepaid.html">알뜰/선불폰</a>
           </li>
         </ul>
       </div>
