--- a/src/components/header.html
+++ b/src/components/header.html
@@ -45,11 +45,10 @@
       </div>
       <div>
         <ul id="main_menu">
-          <li>
-            <a href="#">중고폰</a>
-            <li class="submenu"><a href="/src/pages/buy.html">매입</a></li>
-            <li class="submenu"><a href="/src/pages/sell.html">판매</a></li>
-          </li>
+
+            <li><a href="/src/pages/buy.html">매입</a></li>
+            <li><a href="/src/pages/sell.html">판매</a></li>
+
           <li>
             <a href="/src/pages/prepaid.html">알뜰/선불폰</a>
           </li>
