--- a/src/components/header.html
+++ b/src/components/header.html
@@ -21,8 +21,9 @@
       <div style="display: flex;
       justify-content: space-between;
       align-items: center;">
-       <a href="/index.html" >
+       <a href="tel:0507-1496-0568" >
         <img id="mobile_logo" src="/src/img/callbutton.png" style="width: 100px;" /></a>
+        <a href="/index.html" >
         <img id="mobile_logo" src="/src/img/logo_white.png" style="width: 100px;" /></a>
         <img id="menu_icon" src="/src/img/menu_white.png" style="width: 28px;" />
       </div>
