--- a/src/components/header.html
+++ b/src/components/header.html
@@ -68,8 +68,9 @@
     <!-- 메뉴 목록 -->
     <nav id="pc_menu">
       <ul>
-        <li><a href="/src/pages/blog_deep_page.html">중고폰</a></li>
-        <li><a href="/src/pages/blog_deep_page.html">알뜰/선불폰</a></li>
+        <li><a href="/src/pages/buy.html">매입</a></li>
+         <li><a href="/src/pages/sell.html">판매</a></li>
+        <li><a href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
 
         <li
           style="
