--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,17 @@ header {
   z-index: 9999;
 }
 
+
+header2 {
+  color: #f83aaa;
+  padding: 20px 0px;
+  position: fixed;
+  top: 0;
+  display: inline-flex;
+  width: 100vw;
+  z-index: 9999;
+}
+
 footer {
   background-color: #232423;
   color: #fff;
