--- a/src/components/header.html
+++ b/src/components/header.html
@@ -144,7 +144,7 @@
     if (window.scrollY > 91) {
       header.style.backgroundColor = "white";
     } else {
-      header2.style.backgroundColor = "transparent";
+      header.style.backgroundColor = "transparent";
     }
   });
 </script>
