--- a/src/components/header.html
+++ b/src/components/header.html
@@ -80,6 +80,7 @@
             background-color: #f83aaa;
               margin-top: 20px;
             margin-right: 12px;
+          color: #000000;
           "
         >
           <a>☎ 0507-1496-0568</a>
