--- a/src/components/header.html
+++ b/src/components/header.html
@@ -80,10 +80,9 @@
             background-color: #f83aaa;
               margin-top: 20px;
             margin-right: 12px;
-          color: #000000;
           "
         >
-          <a>☎ 0507-1496-0568</a>
+      <font color="#00FF00">    <a>☎ 0507-1496-0568</a> </font>
         </li>
       </ul>
     </nav>
