--- a/src/components/header.html
+++ b/src/components/header.html
@@ -82,7 +82,7 @@
             margin-right: 12px;
           "
         >
-      <font color="#00FF00">    <a>☎ 0507-1496-0568</a> </font>
+    <a>  <font color="#00FF00"> ☎ 0507-1496-0568 </font></a>
         </li>
       </ul>
     </nav>
