--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,4 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+</head>
+<body>
   <div id="container__div">
 <header id="header-background" style="color: white;">
   <!-- <div style="width: 13%"></div> -->
@@ -183,4 +195,5 @@ window.addEventListener("scroll", function () {
   });
 </script> -->
 
-
+</body>
+</html>
