--- a/src/components/header.html
+++ b/src/components/header.html
@@ -161,8 +161,8 @@ window.addEventListener("scroll", function () {
     headerTexts.forEach(text => {
       text.style.color = "#f83aaa";
 
-      mobileLogo.src = "./src/img/callbutton.png";
-      mobileMenu.src = "./src/img/menu_pink.png";
+      mobileLogo.src = "./../img/callbutton.png";
+      mobileMenu.src = "./../img/menu_pink.png";
     });
   } else {
     headerBackground.style.backgroundColor = "transparent";
@@ -170,8 +170,8 @@ window.addEventListener("scroll", function () {
       text.style.color = "";
     });
 
-    mobileLogo.src = "./src/img/callbutton_white.png";
-    mobileMenu.src = "./src/img/menu_white.png";
+    mobileLogo.src = "./../img/callbutton_white.png";
+    mobileMenu.src = "./../img/menu_white.png";
   }
 });
 
