--- a/src/components/header.html
+++ b/src/components/header.html
@@ -91,7 +91,7 @@
             margin-right: 12px;
           ">
           <a>
-              <font> <i style="font-size: 12px;" class="fas fa-phone-volume"></i> 0507-1496-0568 </font>
+              <font> <i style="font-size: 12px;" class="fas fa-mobile-android-alt"></i> 0507-1496-0568 </font>
           </a>
         </li>
       </ul>
