--- a/src/components/header.html
+++ b/src/components/header.html
@@ -91,7 +91,7 @@
             margin-right: 12px;
           ">
           <a>
-              <font> <i style="font-size: 16px;" class="fas fa-phone-alt"></i> 0507-1496-0568 </font>
+               <img src="/src/img/pc_phone.png" alt="전화기아이콘" height="18" /><font> 0507-1496-0568 </font>
           </a>
         </li>
       </ul>
