--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -11,6 +11,10 @@
     <a href="https://talk.naver.com/ct/w5t762"
       ><img src="/src/img/talktalk_logo.png" style="width: 32px; margin-left: 4px"
     /></a>
+    <a href="https://pf.kakao.com/_xeaKNG/chat/"
+      ><img src="/src/img/kakao_logo.png" style="width: 32px; margin-left: 4px"
+    /></a>
+    
   </div>
   <p class="p14" id="pc_footer" style="font-weight: 300; display: none">
     상호: 예쁜중고폰 | 대표자: 조초연 | 사업자 번호: 781-20-02046<br />고객센터:
