--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -9,7 +9,8 @@
         style="width: 36px; margin-right: 4px"
     /></a>
     <a href="https://talk.naver.com/ct/w5t762"
-      ><img src="/src/img/talktalk_logo.png" style="width: 36px; margin-left: 4px"
+      ><img src="/src/img/talktalk_logo.png" 
+         style="width: 36px; margin-left: 4px"
     /></a>
     <a href="https://pf.kakao.com/_xeaKNG/chat/"
       ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
