--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,7 +1,7 @@
 <footer>
   
   
-  <img src="/src/img/logo_white.png" style="width: 150px; margin-top: 54px" />
+  <img src="/src/img/logo_white.png" style="width: 140px; margin-top: 60px" />
   <div style="margin-top: 20px; margin-bottom: 20px">
     <a href="https://blog.naver.com/prettyphone93"
       ><img
@@ -10,7 +10,7 @@
     /></a>
     <a href="https://talk.naver.com/ct/w5t762"
       ><img src="/src/img/talktalk_logo.png" 
-         style="width: 36px; margin-left: 4px"
+         style="width: 36px; margin-left: 4px; margin-right: 4px"
     /></a>
     <a href="https://pf.kakao.com/_xeaKNG/chat/"
       ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
