--- a/src/components/header.html
+++ b/src/components/header.html
@@ -22,7 +22,7 @@
       align-items: center;
     "
   >
-    <a id="pc_logo" href="/index.html" >
+    <a id="pc_logo" href="/" >
       <img
         src="/src/img/logo_white.png"
         alt="logo"
@@ -39,7 +39,7 @@
 
         <!-- 전화기 아이콘 -->
         <img id="mobile_logo" src="/src/img/callbutton_white.png" style="width: 28px;" /></a>
-        <a href="/index.html" >
+        <a href="/" >
         <img id="mobile_logo" src="/src/img/logo_white.png" style="width: 100px;" /></a>
         <img id="menu_icon" src="/src/img/menu_white.png" style="width: 28px;" />
       </div>
@@ -50,7 +50,7 @@
     <div id="new_window">
       <div style="display: flex; justify-content: space-between">
         <div style="padding: 20px; margin-top: 20px;">
-          <a href="/index.html"><img src="/src/img/logo_black.png" style="width: 120px" /></a>
+          <a href="/"><img src="/src/img/logo_black.png" style="width: 120px" /></a>
         </div>
         <div style="padding: 20px; align-self: center; margin-top: 26px">
           <img
@@ -63,9 +63,9 @@
       <div>
         <ul id="main_menu">
 
-            <li><a href="/src/pages/buy.html">중고폰 매입</a></li>
-            <li><a href="/src/pages/sell.html">중고폰 판매</a></li>
-            <li><a href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
+            <li><a href="/src/pages/buy">중고폰 매입</a></li>
+            <li><a href="/src/pages/sell">중고폰 판매</a></li>
+            <li><a href="/src/pages/prepaid">알뜰/선불폰</a></li>
             <li><a href="https://pf.kakao.com/_xeaKNG/chat/">카톡 채팅 상담</a></li>
             <li><a href="https://talk.naver.com/ct/w5t762">네이버 톡톡 상담</a></li>
               </ul>
@@ -76,9 +76,9 @@
           <!-- 메뉴 목록 -->
           <nav id="pc_menu">
             <ul>
-              <li><a class="header__menu__text" href="/src/pages/buy.html">중고폰 매입</a></li>
-               <li><a class="header__menu__text" href="/src/pages/sell.html">중고폰 판매</a></li>
-              <li><a class="header__menu__text" href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
+              <li><a class="header__menu__text" href="/src/pages/buy">중고폰 매입</a></li>
+               <li><a class="header__menu__text" href="/src/pages/sell">중고폰 판매</a></li>
+              <li><a class="header__menu__text" href="/src/pages/prepaid">알뜰/선불폰</a></li>
 
         <li
           style="
