--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -18,16 +18,16 @@
     
   </div>
   <p class="p14" id="pc_footer" style="font-weight: 300; display: none">
-    상호: 예쁜중고폰 | 대표자: 조초연 | 사업자 번호: 781-20-02046<br />고객센터:
-    0507-1496-0568 | 이메일: ojphone@naver.com<br />주소: 충남 천안시 서북구
+    상호: 예쁜중고폰 | 대표자: 김진아 | 사업자 번호: 622-03-77386<br />고객센터:
+    0507-1496-0568 | 이메일: ypphone@naver.com<br />주소: 충남 천안시 서북구
     두정중7길 1-12
   </p>
   <p
     id="mobile_footer"
     style="font-size: 11px; font-weight: 300; display: none"
   >
-    상호: 예쁜중고폰 | 대표자: 조초연 | 사업자 번호: 781-20-02046<br />고객센터:
-    0507-1496-0568 | 이메일: ojphone@naver.com<br />주소: 충남 천안시 서북구
+    상호: 예쁜중고폰 | 대표자: 김진아 | 사업자 번호: 622-03-77386<br />고객센터:
+    0507-1496-0568 | 이메일: ypphone@naver.com<br />주소: 충남 천안시 서북구
     두정중7길 1-12
   </p>
   <p class="p14" style="font-weight: 300; margin-bottom: 60px">
