--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -34,7 +34,13 @@
     Copyright &copy; 2023 예쁜중고폰 Co., Ltd. All rights reserved.
   </p>
 
-     
+
+   <span itemscope="" itemtype="http://schema.org/Organization">
+<link itemprop="url" href="https://예쁜중고폰.com">
+<a itemprop="sameAs" href="https://blog.naver.com/prettyphone93"></a>
+<a itemprop="sameAs" href="https://talk.naver.com/ct/w5t762"></a>
+</span>
+
 
   
 </footer>
