--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -15,6 +15,9 @@
     <a href="https://pf.kakao.com/_xeaKNG/chat/"
       ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
     /></a>
+      <a href="https://www.n-telecom.co.kr/customers/event_view.jsp?idx=331"
+      ><img src="/src/img/ntel.png" style="width: 36px; margin-left: 4px"
+    /></a>
     
   </div>
   <p class="p14" id="pc_footer" style="font-weight: 300; display: none">
