--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,12 +4,12 @@
   
   <img src="/src/img/logo_white.png" style="width: 140px; margin-top: 60px" />
   <div style="margin-top: 20px; margin-bottom: 20px">
-    <a href="https://blog.naver.com/prettyphone93"
+    <a href="https://blog.naver.com/prettyphone93" target="_blank"
       ><img
         src="/src/img/naver_logo.png"
         style="width: 36px; margin-right: 4px"
     /></a>
-    <a href="https://talk.naver.com/ct/w5t762"
+    <a href="https://talk.naver.com/ct/w5t762" target="_blank"
       ><img src="/src/img/talktalk_logo.png" 
          style="width: 36px; margin-left: 4px; margin-right: 4px"
     /></a>
@@ -17,7 +17,7 @@
       ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
     /></a>
     <br /> <br />
-       <a href="https://www.n-telecom.co.kr/customers/event_view.jsp?idx=331"
+       <a href="https://www.ictmarket.or.kr:8443/ajax/ajax3.do?id=PRE0000187986&seq=1&yn=2" target="_blank"
       ><img src="/src/img/ntel.png" style="width: 80px; margin-left: 4px"
     /></a>
     
