--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -13,7 +13,7 @@
       ><img src="/src/img/talktalk_logo.png" 
          style="width: 36px; margin-left: 4px; margin-right: 4px"
     /></a>
-    <a href="https://pf.kakao.com/_xeaKNG/chat/"
+    <a href="https://pf.kakao.com/_xeaKNG/chat/" target="_blank"
       ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
     /></a>
     <br /> <br />
