--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,11 +50,11 @@ nav ul li a {
    padding: 60px 0px 0px 0px;
 }
 
-.padding.t {
+.padding-t {
    padding: 100px 0px 0px 0px;
 }
 
-.padding.b {
+.padding-b {
    padding: 0px 0px 60px 0px;
 }
 
