--- a/src/components/header.html
+++ b/src/components/header.html
@@ -83,9 +83,9 @@
         <li
           style="
             border-radius: 16px;
-            border: 1px solid #f83aaa;
+            border: 1px solid #F24C7B;
             padding: 6px 20px;
-            background-color: #f83aaa;
+            background-color: #F24C7B;
               margin-top: 20px;
             margin-right: 12px;
           ">
@@ -158,7 +158,7 @@ window.addEventListener("scroll", function () {
   if (window.scrollY > 91) {
     headerBackground.style.backgroundColor = "white";
     headerTexts.forEach(text => {
-      text.style.color = "#f83aaa";
+      text.style.color = "#F24C7B";
 
       mobileLogo.src = "./../img/callbutton.png";
       mobileMenu.src = "./../img/menu_pink.png";
