--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -14,7 +14,7 @@
          style="width: 36px; margin-left: 4px; margin-right: 4px"
     /></a>
     <a href="https://pf.kakao.com/_xeaKNG/chat/" target="_blank"
-      ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px"
+      ><img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px" margin-right: 4px"
     /></a>
        <a href="https://www.ictmarket.or.kr:8443/ajax/ajax3.do?id=PRE0000187986&seq=1&yn=2" target="_blank"
       ><img src="/src/img/ntel.png" style="width: 36px; margin-left: 4px"
