--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -2,21 +2,26 @@
   
 
   
- <img src="/src/img/page-logo.png" style="width: 120px; margin-top: 50px" />
-<div style="margin-top: 20px; margin-bottom: 20px">
-  <a href="https://blog.naver.com/prettyphone93" target="_blank">
-    <img src="/src/img/naver_logo.png" style="width: 36px; margin-right: 4px" />
-  </a>
-  <a href="https://talk.naver.com/ct/w5t762" target="_blank">
-    <img src="/src/img/talktalk_logo.png" style="width: 36px; margin-left: 4px; margin-right: 4px" />
-  </a>
-  <a href="https://pf.kakao.com/_xeaKNG/chat/" target="_blank">
-    <img src="/src/img/kakao_logo.png" style="width: 36px; margin-left: 4px; margin-right: 4px" />
-  </a>
-  <a href="https://www.ictmarket.or.kr:8443/ajax/ajax3.do?id=PRE0000187986&seq=1&yn=2" target="_blank">
-    <img src="/src/img/ntel.png" style="width: 36px; margin-left: 4px" />
-  </a>
-</div>
+  <img src="/src/img/page-logo.png" style="width: 120px; margin-top: 50px" />
+  <div style="margin-top: 20px; margin-bottom: 20px">
+    <a href="https://blog.naver.com/prettyphone93" target="_blank"
+      ><img
+        src="/src/img/naver_logo.png"
+        style="width: 36px; margin-right: 4px"
+    /></a>
+    <a href="https://talk.naver.com/ct/w5t762" target="_blank"
+      ><img src="/src/img/talktalk_logo.png" 
+         style="width: 36px; margin-left: 4px; margin-right: 4px"
+    /></a>
+    <a href="https://pf.kakao.com/_xeaKNG/chat/" target="_blank"
+      ><img src="/src/img/kakao_logo.png"
+         style="width: 36px; margin-left: 4px; margin-right: 4px"
+    /></a>
+       <a href="https://www.ictmarket.or.kr:8443/ajax/ajax3.do?id=PRE0000187986&seq=1&yn=2" target="_blank"
+      ><img src="/src/img/ntel.png"
+         style="width: 36px; margin-left: 4px"
+    /></a>       
+  </div>
   
   <p class="p14" id="pc_footer" style="font-weight: 300; display: none">
     상호: 예쁜중고폰 | 대표자: 김진아 | 사업자 번호: 622-03-77386<br />고객센터:
